--- a/th-expand-syns.cabal
+++ b/th-expand-syns.cabal
@@ -7,8 +7,15 @@ license:             BSD3
 license-file:        LICENSE
 author:              Daniel Schüssler
 maintainer:          daniels@community.haskell.org
-build-depends:       base >= 4, template-haskell, syb, containers
+cabal-version:       >= 1.2
 build-type:          Simple
-ghc-options:         
-exposed-modules:     Language.Haskell.TH.ExpandSyns
 extra-source-files:  testing/Main.hs
+
+source-repository head
+ type: darcs
+ location: http://code.haskell.org/~daniels/th-expans-syns
+
+Library
+    build-depends:       base >= 4, template-haskell, syb, containers
+    ghc-options:         
+    exposed-modules:     Language.Haskell.TH.ExpandSyns
