--- a/th-expand-syns.cabal
+++ b/th-expand-syns.cabal
@@ -7,7 +7,7 @@ license:             BSD3
 license-file:        LICENSE
 author:              Daniel Schüssler
 maintainer:          haskell.5wlh@gishpuppy.com
-cabal-version:       >= 1.6
+cabal-version:       >= 1.8
 build-type:          Simple
 extra-source-files:  testing/Main.hs
 
@@ -19,3 +19,10 @@ Library
     build-depends:       base >= 4 && < 5, template-haskell, syb, containers
     ghc-options:         
     exposed-modules:     Language.Haskell.TH.ExpandSyns
+
+Test-Suite test-th-expand-syns
+    type:               exitcode-stdio-1.0
+    hs-source-dirs:     testing
+    main-is:            Main.hs
+    other-modules:      Util
+    build-depends:      base, th-expand-syns, template-haskell
