--- a/th-expand-syns.cabal
+++ b/th-expand-syns.cabal
@@ -24,5 +24,5 @@ Test-Suite test-th-expand-syns
     type:               exitcode-stdio-1.0
     hs-source-dirs:     testing
     main-is:            Main.hs
-    other-modules:      Util
+    other-modules:      Util, Types
     build-depends:      base, th-expand-syns, template-haskell
