--- a/th-expand-syns.cabal
+++ b/th-expand-syns.cabal
@@ -1,5 +1,5 @@
 name:                th-expand-syns
-version:             0.3.0.4
+version:             0.3.0.5
 synopsis:            Expands type synonyms in Template Haskell ASTs
 description:         Expands type synonyms in Template Haskell ASTs
 category:            Template Haskell
@@ -16,7 +16,7 @@ source-repository head
  location: git://github.com/DanielSchuessler/th-expand-syns.git
 
 Library
-    build-depends:       base >= 4 && < 5, template-haskell, syb, containers
+    build-depends:       base >= 4 && < 5, template-haskell < 2.11, syb, containers
     ghc-options:         
     exposed-modules:     Language.Haskell.TH.ExpandSyns
 
