--- a/th-expand-syns.cabal
+++ b/th-expand-syns.cabal
@@ -11,6 +11,15 @@ cabal-version:       >= 1.8
 build-type:          Simple
 extra-source-files:  changelog.markdown
 homepage:            https://github.com/DanielSchuessler/th-expand-syns
+tested-with:
+    GHC == 7.0.4
+    GHC == 7.2.2
+    GHC == 7.4.2
+    GHC == 7.6.3
+    GHC == 7.8.4
+    GHC == 7.10.3
+    GHC == 8.0.1
+    GHC == 8.1
 
 source-repository head
  type: git
