--- a/th-expand-syns.cabal
+++ b/th-expand-syns.cabal
@@ -1,7 +1,7 @@
 name:                th-expand-syns
-version:             0.4.2.0
+version:             0.4.3.0
 synopsis:            Expands type synonyms in Template Haskell ASTs
-description:         Expands type synonyms in Template Haskell ASTs
+description:         Expands type synonyms in Template Haskell ASTs.
 category:            Template Haskell
 license:             BSD3
 license-file:        LICENSE
