--- a/th-expand-syns.cabal
+++ b/th-expand-syns.cabal
@@ -29,6 +29,7 @@ Library
     build-depends:       base >= 4 && < 5, template-haskell < 2.13, syb, containers
     ghc-options:
     exposed-modules:     Language.Haskell.TH.ExpandSyns
+    other-modules:       Language.Haskell.TH.ExpandSyns.SemigroupCompat
 
 Test-Suite test-th-expand-syns
     type:               exitcode-stdio-1.0
