--- a/th-expand-syns.cabal
+++ b/th-expand-syns.cabal
@@ -20,13 +20,15 @@ tested-with:
     GHC == 7.10.3
     GHC == 8.0.2
     GHC == 8.2.2
+    GHC == 8.4.3
+    GHC == 8.6.1
 
 source-repository head
  type: git
  location: git://github.com/DanielSchuessler/th-expand-syns.git
 
 Library
-    build-depends:       base >= 4 && < 5, template-haskell < 2.14, syb, containers
+    build-depends:       base >= 4 && < 5, template-haskell < 2.15, syb, containers
     ghc-options:
     exposed-modules:     Language.Haskell.TH.ExpandSyns
     other-modules:       Language.Haskell.TH.ExpandSyns.SemigroupCompat
