--- a/th-expand-syns.cabal
+++ b/th-expand-syns.cabal
@@ -24,13 +24,17 @@ tested-with:
     GHC == 8.6.5
     GHC == 8.8.4
     GHC == 8.10.4
+    GHC == 9.0.1
 
 source-repository head
  type: git
  location: https://github.com/DanielSchuessler/th-expand-syns.git
 
 Library
-    build-depends:       base >= 4 && < 5, template-haskell < 2.18, syb, containers
+    build-depends:       base             >= 4.3 && < 5
+                       , containers
+                       , syb
+                       , template-haskell >= 2.5 && < 2.18
     ghc-options:
     exposed-modules:     Language.Haskell.TH.ExpandSyns
     other-modules:       Language.Haskell.TH.ExpandSyns.SemigroupCompat
@@ -41,5 +45,7 @@ Test-Suite test-th-expand-syns
     hs-source-dirs:     testing
     main-is:            Main.hs
     other-modules:      Util, Types
-    build-depends:      base, th-expand-syns, template-haskell
+    build-depends:      base
+                      , template-haskell
+                      , th-expand-syns
     default-language:   Haskell2010
