Use th-abstraction
`th-abstraction` allows us to remove a fair bit of CPP. More importantly,
it allows the test suite to run with GHC 9.0.

--- a/th-expand-syns.cabal
+++ b/th-expand-syns.cabal
@@ -34,6 +34,7 @@ Library
     build-depends:       base             >= 4.3 && < 5
                        , containers
                        , syb
+                       , th-abstraction   >= 0.4 && < 0.5
                        , template-haskell >= 2.5 && < 2.18
     ghc-options:
     exposed-modules:     Language.Haskell.TH.ExpandSyns
@@ -47,5 +48,6 @@ Test-Suite test-th-expand-syns
     other-modules:      Util, Types
     build-depends:      base
                       , template-haskell
+                      , th-abstraction
                       , th-expand-syns
     default-language:   Haskell2010
