--- a/th-expand-syns.cabal
+++ b/th-expand-syns.cabal
@@ -36,7 +36,7 @@ Library
                        , syb
                        , th-abstraction   >= 0.4 && < 0.5
                        , template-haskell >= 2.5 && < 2.18
-    ghc-options:
+    ghc-options:         -Wall
     exposed-modules:     Language.Haskell.TH.ExpandSyns
     other-modules:       Language.Haskell.TH.ExpandSyns.SemigroupCompat
     default-language:    Haskell2010
@@ -50,4 +50,7 @@ Test-Suite test-th-expand-syns
                       , template-haskell
                       , th-abstraction
                       , th-expand-syns
+    ghc-options:        -Wall
+    if impl(ghc >= 8.6)
+      ghc-options:      -Wno-star-is-type
     default-language:   Haskell2010
