--- a/th-expand-syns.cabal
+++ b/th-expand-syns.cabal
@@ -1,7 +1,12 @@
 name:                th-expand-syns
-version:             0.4.8.0
+version:             0.4.9.0
 synopsis:            Expands type synonyms in Template Haskell ASTs
 description:         Expands type synonyms in Template Haskell ASTs.
+                     .
+                     As of version @0.4.9.0@, this library is a small shim on
+                     top of the @applySubstitution@/@resolveTypeSynonyms@
+                     functions from @th-abstraction@, so you may want to
+                     consider using @th-abstraction@ instead.
 category:            Template Haskell
 license:             BSD3
 license-file:        LICENSE
@@ -23,19 +28,20 @@ tested-with:
     GHC == 8.4.4
     GHC == 8.6.5
     GHC == 8.8.4
-    GHC == 8.10.4
+    GHC == 8.10.7
     GHC == 9.0.1
+    GHC == 9.2.*
 
 source-repository head
  type: git
  location: https://github.com/DanielSchuessler/th-expand-syns.git
 
 Library
-    build-depends:       base             >= 4.3 && < 5
+    build-depends:       base             >= 4.3   && < 5
                        , containers
                        , syb
-                       , th-abstraction   >= 0.4 && < 0.5
-                       , template-haskell >= 2.5 && < 2.18
+                       , th-abstraction   >= 0.4.3 && < 0.5
+                       , template-haskell >= 2.5   && < 2.19
     ghc-options:         -Wall
     exposed-modules:     Language.Haskell.TH.ExpandSyns
     other-modules:       Language.Haskell.TH.ExpandSyns.SemigroupCompat
