--- a/th-expand-syns.cabal
+++ b/th-expand-syns.cabal
@@ -29,6 +29,7 @@ tested-with:
     GHC == 9.6.6
     GHC == 9.8.4
     GHC == 9.10.1
+    GHC == 9.12.1
 
 source-repository head
  type: git
@@ -39,7 +40,7 @@ Library
                        , containers
                        , syb
                        , th-abstraction   >= 0.4.3 && < 0.8
-                       , template-haskell >= 2.11  && < 2.23
+                       , template-haskell >= 2.11  && < 2.24
     ghc-options:         -Wall
     exposed-modules:     Language.Haskell.TH.ExpandSyns
     default-language:    Haskell2010
